# lick

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
.github/workflows/: bleeding-edge.yaml  cd.yml  ci.yml
src/lick/: __init__.py  _api.py  _image_processing.py  _interpolate.py  _interpolation.py  _publib.py  _typing.py  lick.py
tests/: test_api.py  test_image_comp.py  test_image_processing.py  test_interface.py  test_interpolate.py  test_interpolation.py  test_single_prec.py
